# teil-python

./: .gitignore  pyproject.toml  requirements.txt
examples/mlp/classifier/: iris.py
examples/mlp/regressor/: diabetes.py
examples/pca/: iris.py
examples/svm/: svc.py  svr.py
examples/tree/classifier/: inlineif.py
src/teil/ebis/: __init__.py  _classifier_base.py  _regressor_base.py
src/teil/ebis/decomposition/: __init__.py  pca.py
src/teil/ebis/naive_bayes/: __init__.py  gaussian.py
src/teil/ebis/neural_network/: __init__.py  mlpc.py  mlpr.py
src/teil/ebis/svm/: __init__.py  svc.py  svr.py
src/teil/ebis/tree/classifier/: __init__.py  inlineif.py
src/teil/ebis/tree/regressor/: inlineif.py
