[build-system]
requires = ["setuptools >= 69.5.1"]
build-backend = "setuptools.build_meta"

[project]
name = "teil"
version = "0.0.1"
dynamic = ["dependencies"]
license = {text="GPLv3"}
authors = [{name="Sergio Branco", email="asergiobranco@local.com"}]
description = "Tiny Embedded Intelligence Layer"
readme = "README.md"
keywords = ["tinyML", "machine learning", "mcu", "microcontroler", "binary"]
requires-python = ">=3.0"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.urls]
Homepage = "https://teil.readthedocs.io"
Documentation = "https://teil.readthedocs.io"
Repository = "https://github.com/asergiobranco/teil-python/"
Tracker = "https://github.com/asergiobranco/teil-python/issues"
Changelog = "https://github.com/asergiobranco/teil-python/blob/main/CHANGELOG.md"

[tool.setuptools]
# Do not install C/C++/Cython source files
include-package-data = false

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}